--- a/javascipt variable and data type operator/index..html
+++ b/javascipt variable and data type operator/index..html
@@ -9,7 +9,8 @@
     
     <h1>Javascript Varaible And Data Type</h1>
 
-    <h1>Javascript Data Types</h1>
+    <h1>Javascript Data Types And Operator </h1>
+    
 
 
     <script src="app.js"></script>
